[workspace]
resolver = "3"
members = [
    "crates/pethit-node",
    "crates/pethit-storage",
    "crates/pethit-execution",
    "crates/pethit-rpc",
    "crates/pethit-txpool", 
    "crates/pethit-consensus",
]

[workspace.dependencies]
# Hashing and Types
alloy-primitives = { version = "1.5", features = ["rlp"]}

# RPC
axum = { version = "0.8" } # Web Server Framework
tokio = { version = "1.0" } # Async Runtime
serde = { version = "1.0", features = ["derive"] } # JSON support
serde_json = { version = "1.0" }

# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }
hex = { version = "0.4" }

# eth
alloy-rlp = { version = "0.3", features = ["derive"]}