[package]
name = "pethit-node"
version = "0.4.0"
edition = "2024"

[dependencies]
pethit-rpc = { path = "../pethit-rpc" }
pethit-storage = { path = "../pethit-storage" }
pethit-txpool = { path = "../pethit-txpool" }
pethit-consensus = { path = "../pethit-consensus" }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }