[package]
name = "pethit-rpc"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.7" # Web Server Framework
tokio = { version = "1.0", features = ["full"] } # Async Runtime
# JSON support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives ={ workspace = true }

# Internal types
pethit-execution = { path = "../pethit-execution" }
pethit-storage = { path = "../pethit-storage" }
pethit-txpool = { path = "../pethit-txpool" }
pethit-consensus = { path = "../pethit-consensus" }