[package]
name = "pethit-rpc"
version = "0.3.0"
edition = "2024"

[dependencies]
# TODO: I think it is a good idea to change all version in root cargo and only use the workspace = true pattern
axum = "0.7" # Web Server Framework
tokio = { version = "1.0", features = ["full"] } # Async Runtime
# JSON support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives ={ workspace = true }

# Internal types
pethit-execution = { path = "../pethit-execution" }
pethit-storage = { path = "../pethit-storage" }
pethit-txpool = { path = "../pethit-txpool" }
pethit-consensus = { path = "../pethit-consensus" }