[package]
name = "pethit-rpc"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }

# Internal types
pethit-execution = { path = "../pethit-execution" }
pethit-storage = { path = "../pethit-storage" }
pethit-txpool = { path = "../pethit-txpool" }
pethit-consensus = { path = "../pethit-consensus" }